added routes for careers and stories of website

--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -622,6 +622,12 @@
                       <a href="/admin/web_features/list">Features</a>
                     </li>
                     <li class="dropdown-item">
+                      <a href="/admin/web_stories/list">Stories</a>
+                    </li>
+                    <li class="dropdown-item">
+                      <a href="/admin/web_careers/list">Careers</a>
+                    </li>
+                    <li class="dropdown-item">
                       <a href="/admin/view_full_answer/list"
                         >View Full Answer</a
                       >
