short video added

--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -558,22 +558,15 @@
                 </a>
               </li>
 
-              <li class="dash-item dash-hasmenu dropdown sidebar-dropdown">
-                <a href="#" class="dash-link menu-toggle nav-link has-dropdown"
-                  ><span class="dash-micon"
-                    ><i class="fa-solid fa-video"></i> </span
-                  ><span class="dash-mtext">Shortvideos</span></a
-                >
-                <div class="sidebar-submenu">
-                  <ul class="dropdown-menu-item">
-                    <li class="dropdown-item">
-                      <a href="/admin/shortvideo/list">Shortvideos List</a>
-                    </li>
-                    <li class="dropdown-item">
-                      <a href="/admin/shortvideo/comments">Comments</a>
-                    </li>
-                  </ul>
-                </div>
+              <li class="dash-item dash-hasmenu">
+                <a href="/admin/shortvideo/list" class="dash-link">
+                  <span class="dash-micon"
+                    ><i class="fa-solid fa-video"></i
+                  ></span>
+                  <span class="dash-mtext text-w">Short Videos</span>
+                </a>
+              </li>
+
               </li>
               <li class="dash-item dash-hasmenu">
                 <a href="/admin/users/list" class="dash-link"
