--- a/views/admin/shortVideo.ejs
+++ b/views/admin/shortVideo.ejs
@@ -1,10 +1,8 @@
 <%- include('partials/header.ejs') %>
 
-<!-- content start -->
 <div class="main-content">
   <section class="section">
     <div class="section-body">
-      <!--  Start-->
       <div class="row">
         <div class="col-12">
           <div class="card">
@@ -14,6 +12,26 @@
             >
               <div class="col-12">
                 <h4 class="float-left">Short videos</h4>
+                <div class="head-right-btn">
+                  <button
+                    class="btn btn-sm btn-secondary float-right card-text-btn"
+                    type="submit"
+                    data-bs-toggle="modal"
+                    data-bs-target="#myModal"
+                  >
+                    <a
+                      href="#"
+                      data-ajax-popup="true"
+                      data-size="md"
+                      data-title="Invite New User"
+                      data-toggle="tooltip"
+                      title=""
+                      data-bs-original-title="Add Short Video"
+                    >
+                      Add
+                    </a>
+                  </button>
+                </div>
               </div>
             </div>
 
@@ -24,49 +42,54 @@
                     <table class="table table-bordered table-md">
                       <thead class="t-head">
                         <tr>
-                            <th>S.No</th>
-                            <th>Video</th>
-                            <th>User</th>
-                            <th>Description</th>
-                            <th>Status</th>
-                            <th>Action</th>
+                          <th>S.No</th>
+                          <th>Video</th>
+                          <th>Tite</th>
+                          <th>Status</th>
+                          <th>Action</th>
                         </tr>
                       </thead>
 
                       <tbody>
                         <% if(!shortVideo[0]){%>
                         <tr>
-                            <td colspan="4">No Short Video Found</td>
+                          <td colspan="4">No Short Video Found</td>
                         </tr>
-                        <% } else { shortVideo.forEach(function(shortVideo,test){ %>
+                        <% } else {
+                        shortVideo.forEach(function(shortVideo,index){ %>
                         <tr>
-                            <td><%= test+1%> </td>
-                            <td><video width="80" height="60" controls>
-                                    <source src="/uploads/shortvideo/<%= shortVideo.video %>" type="video/mp4"></video></td>
-                            <td><%= shortVideo.user_id ? shortVideo.user_id.name : " " %> </td>
-                            <td><%= shortVideo.description %> </td>
-                            <td>
-                              <button
-                                class="btn <%- shortVideo.approved ? 'bg-success' : 'bg-danger' %> text-white"
-                                data-toggle="modal"
-                                data-model="<%= JSON.stringify(shortVideo) %>"
-                                id="accept_btn"
-                                style="cursor: pointer"
-                              >
-                                <%- shortVideo.approved ? 'Active' : 'Inactive' %></button
-                              >
-                            </td>
-                            
-                            <td>
-                              <i
-                                class="btn btn-danger btn-lg fas fa-trash-alt"
-                                onclick="deleteblog('<%-shortVideo._id %>')"
-                              >
-                              </i>
-                            </td>
+                          <td><%= index+1%></td>
+                          <td>
+                            <video width="80" height="60" controls>
+                              <source
+                                src="<%= shortVideo.video %>"
+                                type="video/mp4"
+                              />
+                            </video>
+                          </td>
+                          <td><%= shortVideo.title %></td>
+                          <td>
+                            <button
+                              class="btn <%- shortVideo.approved ? 'bg-success' : 'bg-danger' %> text-white"
+                              data-toggle="modal"
+                              data-model="<%= JSON.stringify(shortVideo) %>"
+                              id="accept_btn"
+                              style="cursor: pointer"
+                            >
+                              <%- shortVideo.approved ? 'Active' : 'Inactive' %>
+                            </button>
+                          </td>
+
+                          <td>
+                            <i
+                              class="btn btn-danger btn-lg fas fa-trash-alt"
+                              onclick="deletevideo('<%-shortVideo._id %>')"
+                            >
+                            </i>
+                          </td>
                         </tr>
                         <% }); } %>
-                    </tbody>
+                      </tbody>
                     </table>
                   </div>
                 </div>
@@ -75,15 +98,13 @@
           </div>
         </div>
       </div>
-      <!-- Ends -->
     </div>
   </section>
-  <!-- Approved -->
+
   <div class="modal fade" id="action">
     <div class="modal-dialog">
       <div class="modal-content">
         <form id="actionForm" class="mx-5">
-          <!-- Modal Header -->
           <div class="modal-header">
             <h4 class="modal-title">Action</h4>
             <button type="button" class="close" data-dismiss="modal">
@@ -91,7 +112,6 @@
             </button>
           </div>
 
-          <!-- Modal body -->
           <div class="modal-body">
             <div class="mb-3">
               <input
@@ -123,13 +143,113 @@
       </div>
     </div>
   </div>
-  <!-- Modal -->
+
+  <div class="modal" id="myModal">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Add Short Video</h5>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="body">
+          <div class="modal-body">
+            <form
+              id="addform"
+              class="form-group font-weight-bold showcursor: true"
+            >
+              <div class="mb-3 d-grid gap-2 col-12 mx-auto">
+                <label for="title" class="form-label">Title</label>
+                <input
+                  name="title"
+                  id="title"
+                  class="form-control"
+                  placeholder="Title"
+                />
+              </div>
+              <div class="mb-3 d-grid gap-2 col-12 mx-auto">
+                <label for="image" class="form-label">Video</label>
+                <input
+                  id="video"
+                  name="vdieo"
+                  class="form-control"
+                  placeholder="Video"
+                  type="file"
+                  accept="video/*"
+                />
+              </div>
+
+              <button
+                type="submit"
+                class="btn mt-3 pull-right"
+                style="background-color: #6fd943; color: #fff"
+              >
+                Add
+              </button>
+            </form>
+          </div>
+          <div class="col-md-12 modal-footer"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-<!-- Main Content -->
 
 <%- include ('partials/footer.ejs') %>
 <script>
-  function deleteblog(id) {
+  function getFormData($form) {
+    var unindexed_array = $form.serializeArray();
+    var indexed_array = {};
+
+    $.map(unindexed_array, function (n, i) {
+      indexed_array[n["name"]] = n["value"];
+    });
+
+    return indexed_array;
+  }
+
+  const form = $("#addform");
+
+  form.on("submit", submitHandler);
+
+  function submitHandler(e) {
+    e.preventDefault();
+
+    // PREPARE FORM DATA
+    let formData = new FormData();
+    formData.append("title", $("#title").val());
+    formData.append("video", $("#video")[0].files[0]);
+
+    // DO POST
+    $.ajax({
+      type: "POST",
+      contentType: false,
+      processData: false,
+      url: "/admin/shortvideo/add",
+      data: formData,
+    })
+
+      .done((res) => {
+        if (res.error == true) {
+          renderToast({ message: res.message, icon: "error" });
+        } else {
+          renderToast({ message: res.message, icon: "success" });
+          setTimeout(() => {
+            window.location.reload();
+          }, 2000);
+        }
+      })
+      .fail(function (xhr, status, error) {
+        console.log(xhr.responseText);
+      });
+  }
+</script>
+<script>
+  function deletevideo(id) {
     if (confirm("Do you really want to delete this record")) {
       // DO POST
       $.ajax({
@@ -172,6 +292,7 @@
       : $("#approved").bootstrapToggle("off");
   });
 </script>
+
 <script>
   function getFormData($form) {
     var unindexed_array = $form.serializeArray();
