--- a/views/admin/user-list.ejs
+++ b/views/admin/user-list.ejs
@@ -54,7 +54,7 @@
                           </td>
 
                           <td><%= recordData.name %></td>
-                          <td><%= recordData.mobile_number %></td>
+                          <td><%= recordData.contactNumber %></td>
                           <td><%= recordData.age %></td>
                           <td><%= recordData.city %></td>
                           <td><%= recordData.gender %></td>
