--- a/views/admin/web_features.ejs
+++ b/views/admin/web_features.ejs
@@ -129,7 +129,7 @@
                     <input
                     id="image"
                     name="image"
-                    class=form-control"
+                    class="form-control"
                     placeholder="Image"
                     type="file"
                     accept="image/*"
