--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -575,6 +575,13 @@
                   ><span class="dash-mtext">Users</span></a
                 >
               </li>
+              <li class="dash-item dash-hasmenu">
+                <a href="/admin/web_userContactInfo/list" class="dash-link"
+                  ><span class="dash-micon"
+                    ><i class="fa-solid fa-users"></i> </span
+                  ><span class="dash-mtext">Web Users Contact</span></a
+                >
+              </li>
               <li class="dash-item dash-hasmenu dropdown sidebar-dropdown">
                 <a href="#" class="dash-link menu-toggle nav-link has-dropdown"
                   ><span class="dash-micon">
@@ -619,6 +626,9 @@
                     </li>
                     <li class="dropdown-item">
                       <a href="/admin/web_careers/list">Careers</a>
+                    </li>
+                    <li class="dropdown-item">
+                      <a href="/admin/web_hero/list">Hero</a>
                     </li>
                     <li class="dropdown-item">
                       <a href="/admin/view_full_answer/list"
