--- a/views/admin/plan.ejs
+++ b/views/admin/plan.ejs
@@ -11,7 +11,7 @@
               style="height: 70px; background-color: #6fd943"
             >
               <div class="col-12">
-                <h4 class="float-left">Plan</h4>
+                <h4 class="float-left">Plans</h4>
                 <div class="head-right-btn">
                   <button
                     class="btn btn-sm btn-secondary float-right card-text-btn"
@@ -44,9 +44,9 @@
                         <tr>
                           <th>S.No</th>
                           <th>Title</th>
-                          <th>Actual Price</th>
-                          <th>Offer Price</th>
+                          <th>Price</th>
                           <th>Duration</th>
+                          <th>Description</th>
                           <th>Action</th>
                         </tr>
                       </thead>
@@ -60,9 +60,9 @@
                         <tr>
                           <td><%= index+1 %></td>
                           <td><%= plan.title %></td>
-                          <td><%= plan.actual_price %></td>
-                          <td><%= plan.offer_price %></td>
+                          <td><%= plan.price %></td>
                           <td><%= plan.duration %></td>
+                          <td><%= plan.description %></td>
                           <td style="width: 12px">
                             <i
                               class="btn btn-danger btn-lg fas fa-trash-alt"
@@ -99,12 +99,6 @@
         <div class="body">
           <div class="modal-body">
             <form id="addform" class="mx-5 form-group font-weight-bold showcursor: true">
-              <input
-                type="hidden"
-                name="package_id"
-                id="package_id"
-                value="<%= package_id %>"
-              />
               <div class="mb-3">
                 <label>Title: </label>
                 <input
@@ -116,34 +110,33 @@
                 />
               </div>
               <div class="mb-3">
-                <label>Actual Price: </label>
+                <label>Price: </label>
                 <input
                   type="text"
                   class="form-control"
-                  id="actual_price"
-                  name="actual_price"
-                  placeholder="Actual Price"
+                  id="price"
+                  name="price"
+                  placeholder="Price"
                 />
               </div>
               <div class="mb-3">
-                <label>Offer Price: </label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="offer_price"
-                  name="offer_price"
-                  placeholder="Offer Price"
-                />
-              </div>
-
-              <div class="mb-3">
-                <label>duration: </label>
+                <label>Duration: </label>
                 <input
                   type="text"
                   class="form-control"
                   id="duration"
                   name="duration"
                   placeholder="Duration"
+                />
+              </div>
+              <div class="mb-3">
+                <label>Description: </label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="description"
+                  name="description"
+                  placeholder="Description"
                 />
               </div>
               <button
@@ -174,7 +167,6 @@
 
     // PREPARE FORM DATA
     var formData = getFormData($(addform));
-    console.log(formData);
 
     // // DO POST
     $.ajax({
